Fix sample display
This resolves some issues where it would look weird on mobile.

--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -5,7 +5,8 @@
 }
 
 pre.gistpen {
-	width: 50%;
+	width: 100%;
+	max-width: 500px;
 	word-wrap: normal;
 }
 
